@@ -31,10 +31,16 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "mysql5", "mysql\mysql5.vcpr
 	ProjectSection(ProjectDependencies) = postProject
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "os", "os\os.vcproj", "{9A36DC8A-8070-4F5D-A401-6889DD652288}"
+	ProjectSection(ProjectDependencies) = postProject
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfiguration) = preSolution
 		Debug = Debug
 		Release = Release
+	EndGlobalSection
+	GlobalSection(ProjectDependencies) = postSolution
 	EndGlobalSection
 	GlobalSection(ProjectConfiguration) = postSolution
 		{BC400EC9-8F65-4E34-85DC-687D5272B049}.Debug.ActiveCfg = Debug|Win32
@@ -69,6 +75,10 @@ Global
 		{159607BD-674F-44DA-9290-CF923B2703CC}.Debug.Build.0 = Debug|Win32
 		{159607BD-674F-44DA-9290-CF923B2703CC}.Release.ActiveCfg = Release|Win32
 		{159607BD-674F-44DA-9290-CF923B2703CC}.Release.Build.0 = Release|Win32
+		{9A36DC8A-8070-4F5D-A401-6889DD652288}.Debug.ActiveCfg = Debug|Win32
+		{9A36DC8A-8070-4F5D-A401-6889DD652288}.Debug.Build.0 = Debug|Win32
+		{9A36DC8A-8070-4F5D-A401-6889DD652288}.Release.ActiveCfg = Release|Win32
+		{9A36DC8A-8070-4F5D-A401-6889DD652288}.Release.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 	EndGlobalSection
